tests/data/references/auth-policy.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: foo-dev
  namespace: istio-system
spec:
  endpoints:
    # ip is a vm/service outside the cluster
    - address: 10.15.1.121
  exportTo:
    - "."
  hosts:
    - foo-dev.istio-system.svc.cluster.local
  location: MESH_EXTERNAL
  ports:
    - name: http
      number: 49000
      protocol: HTTP
  resolution: STATIC
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: foo-dev
  namespace: istio-system
spec:
  hosts:
    - foo-dev.example.com
  gateways:
    - foo-dev
  http:
    - name: foo-svc
      match:
        - uri:
            prefix: /foo
      rewrite:
        uri: "/foo"
      route:
        - destination:
            host: foo-dev.istio-system.svc.cluster.local
            port:
              number: 49000
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-foo
  namespace: istio-system
spec:
  action: DENY
  selector:
    matchLabels:
      app: istio-ingressgateway
  rules:
    - to:
        - operation:
            hosts:
              - "foo-dev.example.com"
              - "foo-dev.istio-system.svc.cluster.local"
            paths:
              - "/foo"
      when:
        - key: request.headers[x-token]
          notValues:
            - "fooreader"
